--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,10 @@ requests>=2.31.0
 beautifulsoup4>=4.12.0
 lxml>=4.9.0
 
+# Airflow dependencies
+apache-airflow>=2.7.0
+apache-airflow-providers-postgres>=5.7.0
+
 # Optional but recommended for better performance
 # urllib3 is included with requests but can be explicitly specified
 urllib3>=2.0.0
