Add Playwright as a headless browser fallback and enhance ETL logging
- Introduced Playwright for headless browser fallback in `fetch_html_browser` to improve HTML retrieval when informative fields are missing.
- Updated the `sailboat_item_etl` function to log the count of inserted and skipped items, providing better insights into the ETL process.
- Added a new `debug_selectors.py` script for debugging HTML selectors and keywords, enhancing the development workflow.
- Improved the `_has_informative_fields` function to streamline checks for necessary data fields during item parsing.

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,9 @@ apache-airflow-providers-postgres>=5.7.0
 # urllib3 is included with requests but can be explicitly specified
 urllib3>=2.0.0
 
+# Headless browser fallback
+playwright>=1.45.0
+
 # Local modules (included in project):
 # - scripts/user_agents.py (UserAgentManager class)
 # - scripts/scrape_boats.py (main scraping script)
