--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,16 @@
-beautifulsoup4==4.13.4
-certifi==2025.8.3
-charset-normalizer==3.4.2
-idna==3.10
-lxml==6.0.0
-requests==2.32.4
-soupsieve==2.7
-typing_extensions==4.14.1
-urllib3==2.5.0
+# Core web scraping dependencies
+requests>=2.31.0
+beautifulsoup4>=4.12.0
+lxml>=4.9.0
+
+# Web automation (optional, for Playwright fallback)
+playwright>=1.45.0
+
+# Airflow provider packages
+apache-airflow-providers-postgres>=5.10.0
+
+# Data manipulation and utilities
+psycopg2-binary>=2.9.0
+
+# Development and testing tools
+argparse  # Built into Python 3.2+, but explicit for clarity 
