Enhance project configuration and error handling
- Updated `.gitignore` to include additional file types for debugging and testing, improving project cleanliness.
- Added `brotli` to `requirements.txt` for enhanced compression support in web responses.
- Improved error handling in `debug_selectors.py` by implementing a fallback to `html.parser` if `lxml` fails.
- Introduced a `fetch_html_curl` function in `scrape_boats.py` to handle complex encoding and decompression issues, ensuring more reliable HTML retrieval.

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,31 @@ __pycache__/
 
 # Ignorer backup-filer
 *.bak
+
+# Ignoerer debug og testfiler
+*.txt
+*.log
+*.log.*
+*.log.*.*
+*.log.*.*.*
+*.log.*.*.*.*
+*.log.*.*.*.*.*
+
+*.html
+*.json
+*.jsonl
+*.jsonl.*
+*.jsonl.*.*
+*.jsonl.*.*.*
+*.jsonl.*.*.*.*
+*.jsonl.*.*.*.*.*
+
+*.csv
+*.csv.*
+*.csv.*.*
+*.csv.*.*.*
+*.csv.*.*.*.*
+*.csv.*.*.*.*.*
+
+
+
