Enhance sailboat database schema and ETL process
- Updated `requirements.txt` to include dependencies for semantic search, such as `numpy`, `sentence-transformers`, and `openai`.
- Modified `sailboat_db_init.py` to add a `description` column to existing tables and create new tables for semantic search, including `description_chunks` and `semantic_scores`.
- Enhanced `sailboat_item_etl.py` to include the `description` field in data processing and logging for inserted and skipped items, improving error handling for inactive ads.
- Improved data extraction logic in `parse_item.py` to capture detailed descriptions from HTML content, enriching the dataset for better search capabilities.

--- a/requirements.txt
+++ b/requirements.txt
@@ -16,4 +16,18 @@ apache-airflow-providers-postgres>=5.10.0
 psycopg2-binary>=2.9.0
 
 # Development and testing tools
-argparse  # Built into Python 3.2+, but explicit for clarity 
+argparse  # Built into Python 3.2+, but explicit for clarity
+
+# ========== SEMANTIC SEARCH DEPENDENCIES ==========
+# Vector computations and embeddings
+numpy>=1.24.0
+sentence-transformers>=2.2.0
+
+# Optional: OpenAI API for embeddings (alternative to sentence-transformers)
+openai>=0.28.0
+
+# PostgreSQL vector extension (pgvector) - requires installation on DB
+# Note: pgvector must be installed separately on PostgreSQL server
+
+# Machine learning utilities
+scikit-learn>=1.3.0  # For additional ML utilities if needed 
